added project updating

--- a/front/src/styles/_defaults.scss
+++ b/front/src/styles/_defaults.scss
@@ -201,6 +201,7 @@ button,
 }
 
 input {
+  padding: $padding-default * 0.5 $padding-default;
   margin: $margin-default * 0.5 $margin-default;
 }
 
