--- a/front/src/styles/_defaults.scss
+++ b/front/src/styles/_defaults.scss
@@ -319,36 +319,34 @@ div,
   position: absolute;
   left: -1px;
   right: 101%;
-  top: -1px;
-  bottom: 0;
+  height: 0;
+  bottom: -2px;
   z-index: 0;
   background-color: transparent;
   transition: background-color 1s, right 0.6s;
 
   &.WAITING {
-    transition: background-color 1s, right 6s;
+    height: $unit-default * 0.2;
     background-color: $color-status-waiting;
+    transition: background-color 1s, right 6s;
   }
 
   &.SUCCESS {
-    transition: background-color 1s, right 0.6s;
+    height: $unit-default * 0.2;
     background-color: $color-status-success;
+    transition: background-color 0.6s, right 0.6s;
   }
 
   &.ERROR {
-    transition: background-color 1s, right 0.6s;
+    height: $unit-default * 0.2;
     background-color: $color-status-error;
+    transition: background-color 0.6s, right 0.6s;
   }
 
   &.WAITING,
   &.SUCCESS,
   &.ERROR {
     right: 0;
-    //&.DONE {
-    //  line-height: unset;
-    //  transition: 0.1s;
-    //  //background-color: transparent;
-    //}
   }
 }
 
