--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -62,7 +62,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        margin: $margin-default * 0.25 0;
+        margin: $margin-default * 0.4 0;
 
         &-status,
         &-progress,
@@ -72,6 +72,10 @@
         &-option-bar-btn {
           z-index: 1;
           text-align: right;
+        }
+
+        &-status,
+        &-option-bar-btn {
           min-width: $unit-default * 2;
         }
 
@@ -82,16 +86,6 @@
         &-data {
           flex: auto;
           text-align: left;
-
-          &.edit {
-            width: 100%;
-            background-color: $color-bg;
-          }
-        }
-
-        &-progress,
-        &-data,
-        &-updated {
           margin: 0 $margin-default;
         }
 
@@ -100,6 +94,7 @@
         }
 
         &-content {
+          padding: $padding-default * 0.33 $padding-default;
           display: flex;
           flex-direction: row;
           flex: auto;
@@ -109,7 +104,6 @@
           border-color: transparent;
           background-color: $color-mid;
           transition: $transition-default;
-          min-height: $unit-default * 1.33;
         }
 
         &:hover & {
@@ -118,11 +112,34 @@
           }
         }
 
-        &.EDIT {
-          p,
-          button {
-            opacity: 0.3;
-            pointer-events: none;
+        &__edit {
+          display: none;
+        }
+
+        &.EDIT & {
+          &-progress,
+          &-data,
+          &-updated {
+            display: none;
+          }
+
+          &-content {
+            padding: 0;
+            border-color: transparent;
+            background-color: transparent;
+          }
+
+          &__edit {
+            flex: auto;
+            display: inline-block;
+
+            &-input {
+              width: 100%;
+              margin: 0;
+              padding: 0 $padding-default;
+              background-color: transparent;
+              border: $color-fore $border-size solid;
+            }
           }
         }
 
