--- a/front/src/styles/_style.scss
+++ b/front/src/styles/_style.scss
@@ -10,7 +10,6 @@
       align-items: center;
 
       form {
-        height: 2rem;
         display: flex;
         overflow: hidden;
 
@@ -76,7 +75,7 @@
         &-updated,
         &-option-bar-btn {
           z-index: 1;
-          text-align: right;
+          text-align: left;
         }
 
         &-status {
@@ -89,13 +88,8 @@
           min-width: $unit-default * 2;
         }
 
-        &-progress {
-          text-align: left;
-        }
-
         &-data {
           flex: auto;
-          text-align: left;
           margin: 0 $margin-default;
         }
 
@@ -115,19 +109,13 @@
           transition: $transition-default;
         }
 
-        &.SELECT & {
-          &-status {
-            opacity: 1;
-          }
+        &-option-bar-btn {
+          text-align: right;
 
-          &-content {
-            background-color: $color-select;
-          }
-        }
-
-        &:hover & {
-          &-content {
-            border-color: $color-fore;
+          button {
+            margin: 0;
+            text-align: right;
+            padding-right: 0;
           }
         }
 
@@ -149,6 +137,28 @@
               margin: 0;
               padding: 0 $padding-default;
             }
+          }
+        }
+
+        &:hover & {
+          &-content {
+            border-color: $color-fore;
+          }
+        }
+
+        &.SELECT & {
+          &-status {
+            opacity: 1;
+          }
+
+          &-content {
+            background-color: $color-select;
+          }
+        }
+
+        &:hover.SELECT & {
+          &-content {
+            border-color: transparent;
           }
         }
 
