--- a/front/src/styles/_header.scss
+++ b/front/src/styles/_header.scss
@@ -1,6 +1,7 @@
 .task__project__header {
   display: flex;
-  flex-wrap: wrap-reverse;
+  flex-direction: row;
+  align-items: center;
 
   &__info {
     flex-grow: 2;
@@ -48,12 +49,88 @@
     &-name {
       @include overflow-text-hide;
 
+      margin-right: $margin-default;
       max-width: $unit-default * 5;
     }
 
     &-icon {
-      margin: $margin-default;
+      margin: $margin-default 0;
       width: $unit-default * 2;
+    }
+  }
+
+  &__controls {
+    &__switch {
+      &-tasks,
+      &-projects {
+        margin: $margin-default 0;
+        padding: $padding-default;
+        text-transform: uppercase;
+        background-color: $color-mid;
+        border-radius: $border-radius;
+        border: $border-size solid $color-bg;
+        transition: $transition-default * 0.5;
+        color: rgba($color-fore, $color-alpha);
+        -webkit-text-fill-color: rgba($color-fore, $color-alpha);
+
+        &.ACTIVE {
+          outline: none;
+          transform: scaleY(1.1);
+          background-color: $color-success;
+          color: rgba($color-shadow, $color-alpha);
+          border: $border-size solid $color-success;
+          -webkit-text-fill-color: rgba($color-shadow, 1);
+        }
+      }
+
+      &-projects {
+        margin-right: 0;
+        border-right: none;
+        transform-origin: right;
+      }
+
+      &-tasks {
+        margin-left: 0;
+        border-left: none;
+        transform-origin: left;
+      }
+    }
+
+    &__input-bar {
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: row;
+      align-items: center;
+
+      form,
+      button {
+        display: inline-block;
+      }
+
+      form {
+        height: $unit-default * 1.75;
+        padding: 0;
+        flex-grow: 10;
+        flex-shrink: 0;
+        overflow: hidden;
+      }
+
+      button {
+        flex-grow: 0;
+        flex-shrink: 0;
+      }
+
+      input {
+        margin: 0;
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        min-width: unset;
+        max-width: unset;
+      }
     }
   }
 }
